    lookups start at the complementing categories before looking into the
    complemented object itself or into its related entities.

    Updated the Logtalk compiler in order to generate a warning when compiling
    a complementing category for a complemented object that was compiled with
    support for complementing categories turned off.

    Corrected a bug in the processing of meta-calls for meta-predicates where
    the calling context would be set to "this" instead of "sender" whenever a
    meta-argument was one of the ::/2, {}/1, <</2, or :/2 control constructs.
    Thanks to Daniel Lyons for the bug report.

    Corrected a bug in the processing of meta-calls when using wrappers for
    the bagof/3 and setof/3 built-in methods where the meta-argument contains
    multiple existentially qualified variables.

    Removed support for the deprecated "startup_message" flag flags/1 value.

    Allow open lists of terminals in the body of grammar rules.

    Added (+)/1, min/2, max/2, acos/1, and asin/1 to the list of ISO Prolog
    built-in functions used by the portability flag. Added term_variables/2
    to the list of ISO Prolog built-in predicates.

    Added an example, "patching", of using complementing categories to patch
    broken predicate declarations and predicate definitions of complemented
    classes and prototypes.

    Added an example of combining constraints defined in different objects
    to the "chr" example based on sample code posted by Gergö Barany on the
    SWI-Prolog mailing list.

    Added syntax coloring support for the min/2, max/2, acos/1, and asin/1
    functions and the term_variables/2 predicate to all supported text
    editors and syntax highlighters. Updated the syntax highlighting test
    source file to include de facto standard Prolog module directives.

    Updated the support for Exuberant ctags. Declared predicates are now
    listed using the Functor/Arity notation.
